# Converty

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.google  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  pipeline.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/db/: api_keys.rs  jobs.rs  mod.rs  oauth_users.rs  stats.rs  user_settings.rs
src/handlers/: document.rs  image.rs  media.rs  mod.rs  pdf.rs  svg.rs
src/middleware/: auth.rs  rate_limit.rs
src/models/: auth.rs  job.rs  mod.rs  request.rs  response.rs  stats.rs
src/routes/: admin.rs  auth.rs  convert.rs  health.rs  jobs.rs  mod.rs  settings.rs  stats.rs
src/routes/convert/: batch.rs  endpoints.rs  guest.rs  helpers.rs  mod.rs
src/routes/jobs/: crud.rs  drive.rs  mod.rs  stream.rs
src/services/: converter.rs  google_auth.rs  google_drive.rs  mod.rs  queue.rs  stats.rs
src/services/queue/: core.rs  mod.rs  processor.rs  webhooks.rs
src/utils/: content_type.rs  encoding.rs  file.rs  mod.rs  validation.rs
